# mcp_Discord

./: .env.example  README.md  auto_responses.json  pyproject.toml
src/template_server/: auto_response.py  server.py
