[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A template for creating Model Context Protocol (MCP) servers"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-server = "template_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
